patch module path